# ics_toolkit

./: .gitignore  CHANGELOG-2026-02-21.md  Makefile  README.md  config.example.yaml  errors  logging  pyproject.toml  referral-file-analysis  requirements-dev.txt  requirements.txt
ics_toolkit/: __init__.py  __main__.py  cli.py  client_registry.py  exceptions.py  settings.py
ics_toolkit/analysis/: __init__.py  column_map.py  data_loader.py  formatting.py  pipeline.py  utils.py
ics_toolkit/analysis/analyses/: __init__.py  activity.py  base.py  benchmarks.py  cohort.py  cohort_detail.py  demographics.py  dm_source.py  executive_summary.py  performance.py  persona.py  portfolio.py  ref_source.py  source.py  strategic.py  summary.py  templates.py
ics_toolkit/append/: __init__.py  column_detect.py  matcher.py  merger.py  normalizer.py  organizer.py  pipeline.py  trends.py  validation.py
ics_toolkit/referral/: __init__.py  code_decoder.py  column_map.py  data_loader.py  network.py  normalizer.py  pipeline.py  scoring.py  temporal.py
plans/: feat-referral-intelligence-engine.md
tests/: test_client_registry.py  test_settings.py
tests/analysis/: conftest.py  test_cli.py  test_column_map.py  test_data_loader.py  test_deck_builder.py  test_excel_report.py  test_formatting.py  test_pipeline.py  test_pptx_report.py  test_settings.py  test_templates.py  test_utils.py
tests/append/: conftest.py  test_cli.py  test_column_detect.py  test_matcher.py  test_merger.py  test_normalizer.py  test_organizer.py  test_pipeline.py  test_settings.py  test_trends.py  test_validation.py
tests/referral/: conftest.py  test_code_decoder.py  test_column_map.py  test_data_loader.py  test_network.py  test_normalizer.py  test_pipeline.py  test_scoring.py  test_settings.py  test_temporal.py
(+72 files in other folders)
