[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ics-toolkit"
version = "1.0.0"
description = "ICS data pipeline: append accounts and generate analytics reports"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.0",
    "kaleido==0.2.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6.21",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
    "python-dateutil>=2.8",
]

[project.scripts]
ics-toolkit = "ics_toolkit.cli:app"

[tool.setuptools.packages.find]
include = ["ics_toolkit*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
